--- a/order-details.html
+++ b/order-details.html
@@ -150,6 +150,11 @@
         clip-path: polygon(0% 0%, 100% 0%, 75% 100%, 0% 100%);
         width: 55%;
         height: 80px;
+        background-color: #000080 !important;
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+  }
+
  }
       #print-pdf-btn { display: none; } /* Tombol hanya hilang saat print */
       .signature-buttons { display: none; }
