--- a/order-details.html
+++ b/order-details.html
@@ -111,6 +111,7 @@
       border: 1px solid #000;
       padding: 10px;
       width: 300px;
+      height: 300px;
       text-align: center;
     }
 
