--- a/order-details.html
+++ b/order-details.html
@@ -33,7 +33,8 @@
     #brinks-logo {
       position: relative;
       z-index: 1;
-      height: 50px;
+      height: 20px;
+      width: 20px
       margin-top: 15px;
     }
 
