--- a/order-details.html
+++ b/order-details.html
@@ -35,7 +35,7 @@
       z-index: 1;
       height: 20px;
       width: 20px
-      margin-bottom: 15px;
+      margin-top: 60px;
     }
 
     #company-headline {
