--- a/order-details.html
+++ b/order-details.html
@@ -145,6 +145,26 @@
       display: none;
     }
 
+    /* Responsif untuk tampilan mobile */
+    @media screen and (max-width: 768px) {
+    table {
+      display: block;
+      width: 100%;
+      overflow-x: auto;
+      white-space: nowrap;
+  }
+
+    #quotation-table {
+      display: block;
+      width: 100%;
+      overflow-x: auto;
+  }
+
+    th, td {
+      font-size: 14px; /* Mengurangi ukuran font agar lebih pas di layar kecil */
+      padding: 8px; /* Mengurangi padding untuk menghemat ruang */
+  }
+}
     /* Print */
     @media print {
       .blue-shape { 
