--- a/order-details.html
+++ b/order-details.html
@@ -151,6 +151,15 @@
     width: 100%; /* Agar tabel menyesuaikan dengan lebar layar */
     table-layout: fixed; /* Memastikan tabel tetap proporsional */
   }
+     #quotation-table #grand-total-label {
+    width: 100%; /* Agar tabel menyesuaikan dengan lebar layar */
+    table-layout: fixed; /* Memastikan tabel tetap proporsional */
+  }
+      #quotation-table td {
+    width: 100%; /* Agar tabel menyesuaikan dengan lebar layar */
+    table-layout: fixed; /* Memastikan tabel tetap proporsional */
+  }
+
 
   th, td {
     font-size: 9px; /* Mengurangi ukuran font agar lebih muat */
