--- a/order-details.html
+++ b/order-details.html
@@ -178,7 +178,7 @@
   th:nth-child(4), td:nth-child(4) { width: 15%; } /* Quantity */
   th:nth-child(5), td:nth-child(5) { width: 15%; } /* From */
   th:nth-child(6), td:nth-child(6) { width: 15%; } /* To */
-  th:nth-child(7), td:nth-child(7) { width: 20%; } /* Total Cost */
+  th:nth-child(7), td:nth-child(7) { width: 20%; text-align: right; } /* Total Cost */
 }
 
     /* Print */
