--- a/order-details.html
+++ b/order-details.html
@@ -77,6 +77,7 @@
     
     th {
       background-color: #f4f4f4;
+      th:nth-child(7), td:nth-child(7) { text-align: right; }
     }
 
     table tr td:nth-child(7) {
