--- a/order-details.html
+++ b/order-details.html
@@ -195,6 +195,15 @@
         width: 100%; /* Agar tabel menyesuaikan dengan lebar layar */
         table-layout: fixed; /* Memastikan tabel tetap proporsional */
   }
+       th, td {
+        font-size: 9px; /* Mengurangi ukuran font agar lebih muat */
+        padding: 1px; /* Mengurangi padding agar tidak terlalu besar */
+        word-wrap: break-word; /* Memastikan teks tetap rapi dalam sel */
+  }
+
+      th {
+        font-size: 10px; /* Sedikit lebih besar dari td agar tetap terbaca */
+  }
        /* Menyesuaikan header dan sel agar tidak terlalu lebar */
         th:nth-child(1), td:nth-child(1) { width: 15%; } /* Order ID */
         th:nth-child(2), td:nth-child(2) { width: 25%; } /* Date */
