--- a/order-details.html
+++ b/order-details.html
@@ -205,7 +205,7 @@
         table-layout: fixed; /* Memastikan tabel tetap proporsional */
   }
        th, td {
-        font-size: 12px; /* Mengurangi ukuran font agar lebih muat */
+        font-size: 15x; /* Mengurangi ukuran font agar lebih muat */
         padding: 3px; /* Mengurangi padding agar tidak terlalu besar */
         word-wrap: break-word; /* Memastikan teks tetap rapi dalam sel */
   }
