--- a/order-details.html
+++ b/order-details.html
@@ -213,14 +213,22 @@
       th {
         font-size: 15px; /* Sedikit lebih besar dari td agar tetap terbaca */
   }
+       #quotation-table {
+        width: 100%; /* Agar tabel menyesuaikan dengan lebar layar */
+        table-layout: fixed; /* Memastikan tabel tetap proporsional */
+  }
+      #quotation-table td {
+        width: 100%; /* Agar tabel menyesuaikan dengan lebar layar */
+        table-layout: fixed; /* Memastikan tabel tetap proporsional */
+  }
        #quotation-table #grand-total-label {
-        font-size: 10px; /* Mengurangi ukuran font agar lebih muat */
-        padding: 5px; /* Mengurangi padding agar tidak terlalu besar */
+        font-size: 15px; /* Mengurangi ukuran font agar lebih muat */
+        padding: 8px; /* Mengurangi padding agar tidak terlalu besar */
         word-wrap: break-word; /* Memastikan teks tetap rapi dalam sel */
   }
        #quotation-table #grand-total {
-        font-size: 10px; /* Mengurangi ukuran font agar lebih muat */
-        padding: 5px; /* Mengurangi padding agar tidak terlalu besar */
+        font-size: 15px; /* Mengurangi ukuran font agar lebih muat */
+        padding: 8px; /* Mengurangi padding agar tidak terlalu besar */
         word-wrap: break-word; /* Memastikan teks tetap rapi dalam sel */
   }
        /* Menyesuaikan header dan sel agar tidak terlalu lebar */
