--- a/order-details.html
+++ b/order-details.html
@@ -333,7 +333,12 @@
     }
 
     document.getElementById("grand-total").textContent = grandTotal.toLocaleString() +  " " + foundCurrency;
-
+    // Loop setiap baris order dan ubah Total Cost jika bernilai 0
+    document.querySelectorAll('.total-cost').forEach(cell => {
+        if (cell.innerText.trim() === "0" || cell.innerText.trim() === "0 IDR") {
+        cell.innerText = "Price not ready";
+    }
+};
     // Signature Pad
     const canvas = document.getElementById("signature-pad");
     const ctx = canvas.getContext("2d");
