--- a/order-details.html
+++ b/order-details.html
@@ -345,17 +345,23 @@
     // Menampilkan Customer Remarks di bawah tabel order
     const customerRemarks = decodeParam("customer_remarks");
 
-    if (customerRemarks !== "N/A") {
-      const orderId = decodeParam("order_id"); // Mengambil Order ID dari parameter URL
-      const remarksContainer = document.createElement("div");
-      remarksContainer.style.marginTop = "20px";
-      remarksContainer.style.textAlign = "right";
-      remarksContainer.style.fontSize = "14px";
-      remarksContainer.style.fontWeight = "bold";
+   document.addEventListener("DOMContentLoaded", function () {
+  // Ambil elemen Customer Remarks
+  const remarksContainer = document.getElementById("customer-remarks-container");
 
-      document.getElementById("customer-remarks-container").textContent = 
-      "${customerRemarks} - (Order ID: ${orderId})";
-}
+  if (remarksContainer) {
+    // Ambil Customer Remarks dari parameter URL
+    const customerRemarks = decodeParam("customer_remarks");
+    const orderId = decodeParam("order_id");
+
+    // Format teks hanya jika ada Customer Remarks
+    if (customerRemarks !== "N/A") {
+      remarksContainer.textContent = "${customerRemarks} - (Order ID: ${orderId})";
+    }
+  } else {
+    console.error("Element #customer-remarks-container tidak ditemukan.");
+  }
+});
     
     // Signature Pad
     const canvas = document.getElementById("signature-pad");
